<resources>
    <string name="app_name">PalmsBet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_casino_profile">Игрални Зали и казина</string>
    <string name="casinos">Игрални Зали</string>
    <string name="open">Отворено</string>
    <string name="todays_promos">ДНЕВНИ ПРОМОЦИИ %1$s</string>
    <string name="news">Новини</string>
    <string name="notifications">Известия</string>
    <string name="title_activity_about">За Нас</string>
    <string name="title_activity_terms">Общи Условия</string>
    <string name="title_activity_news_profile">NewsProfileActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="signin">Вход</string>
    <string name="skip">Пропусни</string>
    <string name="info">Инфо</string>
    <string name="gold_jackpot">%1$.2f</string>
    <string name="silver_jackpot">%1$.2f</string>
    <string name="bronze_jackpot">%1$.2f</string>
    <string name="title_activity_weekly_promos">Промоции</string>
    <string name="mon">Понеделник</string>
    <string name="tue">Вторник</string>
    <string name="wen">Сряда</string>
    <string name="thu">Четвъртък</string>
    <string name="fri">Петък</string>
    <string name="sat">Събота</string>
    <string name="sun">Неделя</string>
    <string name="weekly_promos">Промоции</string>
    <string name="all_casinos">Игрални зали и казина</string>
    <string name="jackpot_value">%1$d лв.</string>
    <string name="WelcomeMessage">Всичко от игралния свят на PALMS BET- на едно място! PALMS BET мобилно приложение е тук, за да се превърне във Вашия личен, джобен гид в света на забавленията и печалбите. Модерно, разбираемо и достъпно за употреба и изключително полезен, приложението ще Ви предостави лесно да се ориентирате в игралната вселена. Намерете най-близката до Вас игрална зала или казино, следете за актуалните промоции, които ще Ви предоставят по-големи шансове за печалби, информирайте се за стойността на постоянно нарастващи мистерии и джакпоти и бъдете в час с календара на най-веселите партита в града.</string>
    <string name="monthly_promo">МЕСЕЧНА ПРОМОЦИЯ %1$d %2$s</string>
    <string name="add_to_fav">Добави в любими</string>
    <string name="remove_from_fav">Премахни от любими</string>
    <string name="look">Виж</string>
    <string name="save_pass">Запази</string>
    <string name="old_pass">Стара парола</string>
    <string name="new_pass">Нова парола</string>
    <string name="repeat_pass">Повтори парола</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профил</string>
    <string name="Login">Вход</string>
    <string name="about">За Нас</string>
    <string name="terms">Общи Условия</string>
    <string name="signout">Изход</string>
    <string name="favs">Любими зали</string>
    <string name="fav_halls">Любими зали</string>
    <string name="wrong_user_pass_message">Потребителско име и/или парола са грешни</string>
    <string name="server_connection_error">Проблем със сървъра, моля опитайте отново</string>
    <string name="network_problem">Network problem</string>
    <string name="try_again_later">Please try again later.</string>
    <string name="welcome_string">ДОБРЕ ДОШЛИ В</string>
    <string name="palms_bet">PALMS BET</string>
</resources>
