<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:showIn="@layout/activity_change_pass">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context=".LoginActivity">

        <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pass"/>

        <EditText
                android:id="@+id/new_password"
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass"
                android:inputType="textPassword"/>

        <EditText
                android:id="@+id/new_password2"
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_pass"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/btn_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_selector"
                android:layout_marginTop="30dp"
                android:text="@string/save_pass"
                android:textColor="@drawable/blue_text_selector"/>
    </LinearLayout>

</androidx.constraintlayout.ConstraintLayout>