<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CasinoProfile"
            tools:showIn="@layout/activity_casino_profile">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="top">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="260dp">
                <androidx.viewpager.widget.ViewPager
                        android:id="@+id/pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none"/>
                <ImageView
                        android:id="@+id/slider_arrow_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_slider_arrows_1"
                        android:tint="@color/c_text_white"
                        android:layout_gravity="center_vertical|left"/>
                <ImageView
                        android:id="@+id/slider_arrow_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right_1"
                        android:tint="@color/c_text_white"
                        android:layout_gravity="center_vertical|right"/>
            </FrameLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/card_background"
                    android:layout_marginTop="210dp"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin">
                <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/icon"
                        android:layout_gravity="center_vertical"/>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp">
                    <TextView
                            android:id="@+id/h_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Casino palms bet"
                            android:maxLines="2"/>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="18dp">
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_clock"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="1dp"
                                android:layout_marginBottom="1dp"/>
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp">
                            <TextView
                                    android:id="@+id/h_working_hours"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="0 - 24 ч."/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/open"
                                    android:layout_marginLeft="5dp"
                                    android:textColor="#00ff00"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3.4 km"
                        android:layout_marginTop="10dp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="280dp">
                <LinearLayout
                        android:id="@+id/jackpots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <FrameLayout
                            android:id="@+id/gold_jackpot"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:background="@drawable/gold_new"
                            android:layout_gravity="center_horizontal">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_gravity="center"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="8dp">
                            <TextView
                                    android:id="@+id/gold_jackpot_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="2030,55"
                                    android:textSize="19sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/c_text_white"/>
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                            android:id="@+id/silver_jackpot"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:background="@drawable/silver_new"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center_horizontal">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_gravity="center"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="8dp">
                            <TextView
                                    android:id="@+id/silver_jackpot_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="2030,55"
                                    android:textSize="19sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/c_text_white"/>
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                            android:id="@+id/bronze_jackpot"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:background="@drawable/bronze_new"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center_horizontal">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_gravity="center"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="8dp">
                            <TextView
                                    android:id="@+id/bronze_jackpot_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="2030,55"
                                    android:textSize="19sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/c_text_white"/>
                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

                <TextView
                        android:id="@+id/todays_promos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_promos"/>

                <LinearLayout
                        android:id="@+id/promos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"/>

                <WebView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="8dp"
                        android:background="@color/c_grey"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/card_background"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">

                        <TextView
                                android:id="@+id/casino_address"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:textColor="@color/c_text"
                                android:layout_marginLeft="8dp"
                                android:drawableLeft="@drawable/game_area"/>
                    </LinearLayout>
                    <!--Map-->
                    <!--<fragment
                            android:id="@+id/map"
                            class="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="240dp"/>-->
                </LinearLayout>

                <LinearLayout
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="66dp">
                    <Button
                            style="?android:attr/buttonBarButtonStyle"
                            android:id="@+id/weeklyPromos"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/weekly_promos"
                            android:drawableTop="@drawable/week_promo"
                            android:onClick="onWeeklyClicked">
                    </Button>
                    <Button
                            style="?android:attr/buttonBarButtonStyle"
                            android:id="@+id/addFav"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/add_to_fav"
                            android:drawableTop="@drawable/fav_not_selected">
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
    <FrameLayout
            android:id="@+id/call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c_blue"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_gravity="bottom">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_phone"/>
            <TextView
                    android:id="@+id/casino_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="48dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>